// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`anyToError 1`] = `
Map {
  undefined => [Error: undefined],
  null => [Error: null],
  "" => [Error: empty_string],
  "hello a" => [Error: hello a],
  0 => [Error: 0],
  1 => [Error: 1],
  -5 => [Error: -5],
  [Function] => [Error: function],
  {} => [Error: {}],
  [] => [Error: []],
  [
    "a",
  ] => [Error: [
  "a"
]],
  {
    "a": "aa",
  } => [Error: {
  "a": "aa"
}],
  [Error: err msg] => [Error: err msg],
  {
    "message": "yada",
  } => [Error: {
  "message": "yada"
}],
  {
    "data": {},
    "message": "yada",
  } => [Error: {
  "message": "yada",
  "data": {}
}],
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
  } => [Error: {
  "message": "yada",
  "data": {
    "httpStatusCode": 404
  }
}],
  {
    "message": "yada",
    "name": "Error",
  } => [Error: yada],
  {
    "data": {},
    "message": "yada",
    "name": "Error",
  } => [Error: yada],
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
    "name": "Error",
  } => [Error: yada],
  [AppError: err msg] => [AppError: err msg],
  [HttpRequestError: http err msg] => [HttpRequestError: http err msg],
  {
    "error": {
      "data": {
        "a": "b
c",
        "httpStatusCode": 400,
      },
      "message": "err msg",
      "name": "HttpError",
    },
  } => [HttpError: err msg],
}
`;

exports[`anyToErrorObject 1`] = `
Map {
  undefined => {
    "data": {},
    "message": "undefined",
    "name": "Error",
  },
  null => {
    "data": {},
    "message": "null",
    "name": "Error",
  },
  "" => {
    "data": {},
    "message": "empty_string",
    "name": "Error",
  },
  "hello a" => {
    "data": {},
    "message": "hello a",
    "name": "Error",
  },
  0 => {
    "data": {},
    "message": "0",
    "name": "Error",
  },
  1 => {
    "data": {},
    "message": "1",
    "name": "Error",
  },
  -5 => {
    "data": {},
    "message": "-5",
    "name": "Error",
  },
  [Function] => {
    "data": {},
    "message": "function",
    "name": "Error",
  },
  {} => {
    "data": {},
    "message": "{}",
    "name": "Error",
  },
  [] => {
    "data": {},
    "message": "[]",
    "name": "Error",
  },
  [
    "a",
  ] => {
    "data": {},
    "message": "[
  "a"
]",
    "name": "Error",
  },
  {
    "a": "aa",
  } => {
    "data": {},
    "message": "{
  "a": "aa"
}",
    "name": "Error",
  },
  [Error: err msg] => {
    "data": {},
    "message": "err msg",
    "name": "Error",
  },
  {
    "message": "yada",
  } => {
    "data": {},
    "message": "{
  "message": "yada"
}",
    "name": "Error",
  },
  {
    "data": {},
    "message": "yada",
  } => {
    "data": {},
    "message": "{
  "message": "yada",
  "data": {}
}",
    "name": "Error",
  },
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
  } => {
    "data": {},
    "message": "{
  "message": "yada",
  "data": {
    "httpStatusCode": 404
  }
}",
    "name": "Error",
  },
  {
    "message": "yada",
    "name": "Error",
  } => {
    "data": {},
    "message": "yada",
    "name": "Error",
  },
  {
    "data": {},
    "message": "yada",
    "name": "Error",
  } => {
    "data": {},
    "message": "yada",
    "name": "Error",
  },
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
    "name": "Error",
  } => {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
    "name": "Error",
  },
  [AppError: err msg] => {
    "data": {},
    "message": "err msg",
    "name": "AppError",
  },
  [HttpRequestError: http err msg] => {
    "cause": {
      "data": {},
      "message": "Type error: la-la",
      "name": "AppError",
    },
    "data": {
      "backendResponseStatusCode": 400,
    },
    "message": "http err msg",
    "name": "HttpRequestError",
  },
  {
    "error": {
      "data": {
        "a": "b
c",
        "httpStatusCode": 400,
      },
      "message": "err msg",
      "name": "HttpError",
    },
  } => {
    "data": {
      "a": "b
c",
      "httpStatusCode": 400,
    },
    "message": "err msg",
    "name": "HttpError",
  },
}
`;

exports[`appErrorToErrorObject / errorObjectToAppError snapshot 1`] = `
{
  "data": {
    "a": "b",
  },
  "message": "hello",
  "name": "AppError",
  "stack": StringContaining "AppError",
}
`;

exports[`isErrorLike 1`] = `
Map {
  undefined => false,
  null => false,
  "" => false,
  "hello a" => false,
  0 => false,
  1 => false,
  -5 => false,
  [Function] => false,
  {} => false,
  [] => false,
  [
    "a",
  ] => false,
  {
    "a": "aa",
  } => false,
  [Error: err msg] => true,
  {
    "message": "yada",
  } => false,
  {
    "data": {},
    "message": "yada",
  } => false,
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
  } => false,
  {
    "message": "yada",
    "name": "Error",
  } => true,
  {
    "data": {},
    "message": "yada",
    "name": "Error",
  } => true,
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
    "name": "Error",
  } => true,
  [AppError: err msg] => true,
  [HttpRequestError: http err msg] => true,
  {
    "error": {
      "data": {
        "a": "b
c",
        "httpStatusCode": 400,
      },
      "message": "err msg",
      "name": "HttpError",
    },
  } => false,
}
`;

exports[`isErrorObject 1`] = `
Map {
  undefined => false,
  null => false,
  "" => false,
  "hello a" => false,
  0 => false,
  1 => false,
  -5 => false,
  [Function] => false,
  {} => false,
  [] => false,
  [
    "a",
  ] => false,
  {
    "a": "aa",
  } => false,
  [Error: err msg] => false,
  {
    "message": "yada",
  } => false,
  {
    "data": {},
    "message": "yada",
  } => false,
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
  } => false,
  {
    "message": "yada",
    "name": "Error",
  } => false,
  {
    "data": {},
    "message": "yada",
    "name": "Error",
  } => true,
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
    "name": "Error",
  } => true,
  [AppError: err msg] => true,
  [HttpRequestError: http err msg] => true,
  {
    "error": {
      "data": {
        "a": "b
c",
        "httpStatusCode": 400,
      },
      "message": "err msg",
      "name": "HttpError",
    },
  } => false,
}
`;

exports[`isHttpErrorResponse 1`] = `
Map {
  undefined => false,
  null => false,
  "" => false,
  "hello a" => false,
  0 => false,
  1 => false,
  -5 => false,
  [Function] => false,
  {} => false,
  [] => false,
  [
    "a",
  ] => false,
  {
    "a": "aa",
  } => false,
  [Error: err msg] => false,
  {
    "message": "yada",
  } => false,
  {
    "data": {},
    "message": "yada",
  } => false,
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
  } => false,
  {
    "message": "yada",
    "name": "Error",
  } => false,
  {
    "data": {},
    "message": "yada",
    "name": "Error",
  } => false,
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
    "name": "Error",
  } => false,
  [AppError: err msg] => false,
  [HttpRequestError: http err msg] => false,
  {
    "error": {
      "data": {
        "a": "b
c",
        "httpStatusCode": 400,
      },
      "message": "err msg",
      "name": "HttpError",
    },
  } => true,
}
`;

exports[`isHttpRequestErrorObject 1`] = `
Map {
  undefined => false,
  null => false,
  "" => false,
  "hello a" => false,
  0 => false,
  1 => false,
  -5 => false,
  [Function] => false,
  {} => false,
  [] => false,
  [
    "a",
  ] => false,
  {
    "a": "aa",
  } => false,
  [Error: err msg] => false,
  {
    "message": "yada",
  } => false,
  {
    "data": {},
    "message": "yada",
  } => false,
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
  } => false,
  {
    "message": "yada",
    "name": "Error",
  } => false,
  {
    "data": {},
    "message": "yada",
    "name": "Error",
  } => false,
  {
    "data": {
      "httpStatusCode": 404,
    },
    "message": "yada",
    "name": "Error",
  } => false,
  [AppError: err msg] => false,
  [HttpRequestError: http err msg] => false,
  {
    "error": {
      "data": {
        "a": "b
c",
        "httpStatusCode": 400,
      },
      "message": "err msg",
      "name": "HttpError",
    },
  } => false,
}
`;
